# actix-crud-api

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/db_setup/: mod.rs
src/endpoints/: mod.rs
src/helper_functions/: mod.rs
src/macros/: mod.rs
src/struct_definitions/: mod.rs
