[package]
name = "actix-crud-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
fake = { version = "4.3.0", features = ["derive", "chrono",]}
futures = "0.3.31"
heed = "0.22.0"
rand = "0.9.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
